// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`makePropertiesFile Properties for sbanken has to validate 1`] = `
"/** This file is auto generated by makePropertiesFile.ts */

export default {
  '--sb-font-family-default': "'Roboto', 'Helvetica', 'Arial', sans-serif",
  '--sb-font-family-heading': "'MaisonNeueHeadings', 'Roboto', 'Helvetica',",
  '--sb-font-weight-default': 'normal',
  '--sb-font-weight-basis': 'normal',
  '--sb-font-weight-regular': 'normal',
  '--sb-font-weight-medium': '500',
  '--sb-font-weight-bold': '700',
  '--sb-font-size-x-small': '0.75rem',
  '--sb-font-size-small': '0.875rem',
  '--sb-font-size-basis': '1rem',
  '--sb-font-size-basis--em': '1em',
  '--sb-font-size-lead': 'var(--font-size-medium)',
  '--sb-font-size-medium': '1.25rem',
  '--sb-font-size-medium--plus': '1.625rem',
  '--sb-font-size-large': '2rem',
  '--sb-font-size-x-large': '2.375rem',
  '--sb-font-size-xx-large': '3rem',
  '--sb-line-height-x-small': '1.125rem',
  '--sb-line-height-small': '1.25rem',
  '--sb-line-height-basis': '1.5rem',
  '--sb-line-height-basis--em': '1.5em',
  '--sb-line-height-lead': '1.75rem',
  '--sb-line-height-medium': '2rem',
  '--sb-line-height-large': '2.375rem',
  '--sb-line-height-x-large': '2.75rem',
  '--sb-line-height-xx-large': '3.375rem',
  '--sb-color-black': '#000',
  '--sb-color-text': '#18172a',
  '--sb-color-gray-dark-3': '#3a3a4a',
  '--sb-color-gray-dark-3-neutral': '#3e3e4a',
  '--sb-color-gray-dark-2': '#4a4a5b',
  '--sb-color-gray-dark-2-neutral': '#656472',
  '--sb-color-gray-dark': '#666578',
  '--sb-color-gray-dark-neutral': '#9494a3',
  '--sb-color-gray': '#bbbbce',
  '--sb-color-gray-neutral': '#bdbdc6',
  '--sb-color-gray-light': '#d9d9e4',
  '--sb-color-gray-light-2': '#ebebf2',
  '--sb-color-gray-light-3': '#f9f9fd',
  '--sb-color-purple': '#1c1b4e',
  '--sb-color-purple-alternative': '#222163',
  '--sb-color-green': '#92eecd',
  '--sb-color-white': '#fff',
  '--sb-color-red': '#d8134b',
  '--sb-color-magenta': '#ff3c64',
  '--sb-color-orange': '#ff5b44',
  '--sb-color-yellow-dark': '#f7bf16',
  '--sb-color-yellow': '#ffef57',
  '--sb-color-green-dark-3': '#00785b',
  '--sb-color-green-dark-2': '#1e9f73',
  '--sb-color-violet': '#4e08bc',
  '--sb-color-violet-light': '#7129e2',
  '--sb-color-blue-dark-2': '#044ccc',
  '--sb-color-blue-dark': '#005cff',
  '--sb-color-blue': '#008eff',
  '--sb-color-orange-light': '#ff817b',
  '--sb-color-orange-light-2': '#ffd7d5',
  '--sb-color-orange-light-3': '#fff0ef',
  '--sb-color-magenta-light': '#ffb6d2',
  '--sb-color-magenta-light-2': '#ffdbe9',
  '--sb-color-magenta-light-3': '#fff5f9',
  '--sb-color-yellow-light': '#fff489',
  '--sb-color-yellow-light-2': '#fff9c4',
  '--sb-color-yellow-light-3': '#fffce5',
  '--sb-color-green-dark': '#64d7b4',
  '--sb-color-green-light': '#c8f6e5',
  '--sb-color-green-light-2': '#e5fff7',
  '--sb-color-violet-light-2': '#be99ff',
  '--sb-color-violet-light-3': '#e0d0ff',
  '--sb-color-violet-light-4': '#f1ebff',
  '--sb-color-blue-light': '#61b9ff',
  '--sb-color-blue-light-2': '#bfe3ff',
  '--sb-color-blue-light-3': '#ebf6ff',
  '--sb-spacing-x-small': '0.5rem',
  '--sb-spacing-small': '1rem',
  '--sb-spacing-medium': '1.5rem',
  '--sb-spacing-large': '2rem',
  '--sb-spacing-x-large': '3rem',
  '--sb-spacing-xx-large': '3.5rem',
  '--sb-layout-small': '40em',
  '--sb-layout-medium': '60em',
  '--sb-layout-large': '72em',
  '--sb-layout-x-large': '80em',
  '--sb-layout-xx-large': '90em',
  '--sb-shadow-small': '0 2px 4px rgba(38 35 66 / 12%)',
  '--sb-shadow-medium': '0 5px 20px rgba(38 35 66 / 10%)',
  '--sb-shadow-large': '0 5px 20px rgba(38 35 66 / 20%)',
  '--sb-shadow-hover': '0 20px 40px rgba(38 35 66 / 20%)',
  '--sb-easing-default': 'cubic-bezier(0.42, 0, 0, 1)',
  '--prose-max-width': '60ch',
  '--color-emerald-green-50': '#89aaac',
  '--color-emerald-green-25': '#c4d4d6',
  '--color-emerald-green-10': '#e8eeef',
  '--ca-font-family-heading': "'ArizonaFlare', var(--font-family-default)",
  '--ca-color-ocean-green': '#00343e',
  '--ca-color-burgundy-red': '#5c0022',
  '--ca-color-noir-green': '#001114',
  '--ca-color-sea-green': '#007272',
  '--ca-color-noir-red': '#24000d',
  '--ca-color-sober-red': '#8e4049',
  '--ca-color-classic-beige': '#f6eae4',
  '--ca-color-pale-green': '#ccf0e7',
  '--ca-color-pale-red': '#ffdedb',
  '--font-family-default': 'var(--sb-font-family-default)',
  '--font-family-heading': 'var(--sb-font-family-heading)',
  '--font-family-monospace': "'DNBMono', 'Menlo', 'Consolas', 'Roboto Mono',",
  '--font-weight-default': 'normal',
  '--font-weight-basis': 'normal',
  '--font-weight-regular': 'normal',
  '--font-weight-medium': 'var(--sb-font-weight-medium)',
  '--font-weight-bold': 'var(--sb-font-weight-bold)',
  '--font-size-x-small': 'var(--sb-font-size-x-small)',
  '--font-size-small': 'var(--sb-font-size-small)',
  '--font-size-basis': 'var(--sb-font-size-basis)',
  '--font-size-basis--em': 'var(--sb-font-size-basis--em)',
  '--font-size-lead': 'var(--sb-font-size-lead)',
  '--font-size-medium': 'var(--sb-font-size-medium)',
  '--font-size-large': 'var(--sb-font-size-large)',
  '--font-size-x-large': 'var(--sb-font-size-x-large)',
  '--font-size-xx-large': 'var(--sb-font-size-xx-large)',
  '--line-height-xx-small--em': '1em',
  '--line-height-x-small': 'var(--sb-line-height-x-small)',
  '--line-height-small': 'var(--sb-line-height-small)',
  '--line-height-basis': 'var(--sb-line-height-basis)',
  '--line-height-basis--em': 'var(--sb-line-height-basis--em)',
  '--line-height-lead': 'var(--sb-line-height-lead)',
  '--line-height-medium': 'var(--sb-line-height-medium)',
  '--line-height-large': 'var(--sb-line-height-large)',
  '--line-height-x-large': 'var(--sb-line-height-x-large)',
  '--line-height-xx-large': 'var(--sb-line-height-xx-large)',
  '--color-mint-green-50': '#d2f0e9',
  '--color-mint-green-25': '#e9f8f4',
  '--color-mint-green-12': '#f4fbf9',
  '--color-sea-green-30': '#b3d5d5',
  '--color-accent-yellow-30': '#feebc1',
  '--color-signal-orange': '#ff5400',
  '--color-fire-red': '#dc2a2a',
  '--color-success-green': '#007b5e',
  '--color-fire-red-8': '#fdeeee',
  '--color-black': '#000',
  '--color-black-80': '#333',
  '--color-black-55': '#737373',
  '--color-black-20': '#ccc',
  '--color-black-8': '#ebebeb',
  '--color-black-3': '#f8f8f8',
  '--color-white': '#fff',
  '--color-black-border': '#cdcdcd',
  '--color-black-background': '#fafafa',
  '--color-sea-green': '#007272',
  '--color-mint-green': '#a5e1d2',
  '--color-summer-green': '#28b482',
  '--color-emerald-green': '#14555a',
  '--color-ocean-green': '#00343e',
  '--color-accent-yellow': '#fdbb31',
  '--color-indigo': '#23195a',
  '--color-violet': '#6e2382',
  '--color-sky-blue': '#4bbed2',
  '--color-lavender': '#f2f2f5',
  '--color-sand-yellow': '#fbf6ec',
  '--color-pistachio': '#f2f4ec',
  '--color-mint-green-alt': '#ebfffa',
  '--color-indigo-medium': '#6e6491',
  '--color-indigo-light': '#b9afc8',
  '--color-violet-medium': '#a06eaf',
  '--color-violet-light': '#cfb9d7',
  '--color-sky-blue-medium': '#87d2e1',
  '--color-sky-blue-light': '#c3ebf0',
  '--spacing-xx-small': '0.25rem',
  '--spacing-x-small': '0.5rem',
  '--spacing-small': '1rem',
  '--spacing-medium': '1.5rem',
  '--spacing-large': '2rem',
  '--spacing-x-large': '3rem',
  '--spacing-xx-large': '3.5rem',
  '--layout-small': '40em',
  '--layout-medium': '60em',
  '--layout-large': '72em',
  '--layout-x-large': '80em',
  '--layout-xx-large': '90em',
  '--shadow-default': '0 8px 16px rgb(51 51 51 / 8%)',
  '--shadow-default-x': '0',
  '--shadow-default-y': '8px',
  '--shadow-default-blur-radius': '16px',
  '--shadow-default-color': 'rgb(51 51 51 / 8%)',
  '--shadow-sharp': '0 1px 6px rgb(0 0 0 / 16%)',
  '--shadow-sharp-x': '0',
  '--shadow-sharp-y': '1px',
  '--shadow-sharp-blur-radius': '6px',
  '--shadow-sharp-color': 'rgb(0 0 0 / 16%)',
  '--easing-default': 'cubic-bezier(0.42, 0, 0, 1)',
  '--internal-color-background-selected-subtle': '#e4eed7',
  '--theme-color-body': 'var(--sb-color-text)'
}; // prettier-ignore
"
`;

exports[`makePropertiesFile Properties for ui has to validate 1`] = `
"/** This file is auto generated by makePropertiesFile.ts */

export default {
  '--sb-font-family-default': "'Roboto', 'Helvetica', 'Arial', sans-serif",
  '--sb-font-family-heading': "'MaisonNeueHeadings', 'Roboto', 'Helvetica',",
  '--sb-font-weight-default': 'normal',
  '--sb-font-weight-basis': 'normal',
  '--sb-font-weight-regular': 'normal',
  '--sb-font-weight-medium': '500',
  '--sb-font-weight-bold': '700',
  '--sb-font-size-x-small': '0.75rem',
  '--sb-font-size-small': '0.875rem',
  '--sb-font-size-basis': '1rem',
  '--sb-font-size-basis--em': '1em',
  '--sb-font-size-lead': 'var(--font-size-medium)',
  '--sb-font-size-medium': '1.25rem',
  '--sb-font-size-medium--plus': '1.625rem',
  '--sb-font-size-large': '2rem',
  '--sb-font-size-x-large': '2.375rem',
  '--sb-font-size-xx-large': '3rem',
  '--sb-line-height-x-small': '1.125rem',
  '--sb-line-height-small': '1.25rem',
  '--sb-line-height-basis': '1.5rem',
  '--sb-line-height-basis--em': '1.5em',
  '--sb-line-height-lead': '1.75rem',
  '--sb-line-height-medium': '2rem',
  '--sb-line-height-large': '2.375rem',
  '--sb-line-height-x-large': '2.75rem',
  '--sb-line-height-xx-large': '3.375rem',
  '--sb-color-black': '#000',
  '--sb-color-text': '#18172a',
  '--sb-color-gray-dark-3': '#3a3a4a',
  '--sb-color-gray-dark-3-neutral': '#3e3e4a',
  '--sb-color-gray-dark-2': '#4a4a5b',
  '--sb-color-gray-dark-2-neutral': '#656472',
  '--sb-color-gray-dark': '#666578',
  '--sb-color-gray-dark-neutral': '#9494a3',
  '--sb-color-gray': '#bbbbce',
  '--sb-color-gray-neutral': '#bdbdc6',
  '--sb-color-gray-light': '#d9d9e4',
  '--sb-color-gray-light-2': '#ebebf2',
  '--sb-color-gray-light-3': '#f9f9fd',
  '--sb-color-purple': '#1c1b4e',
  '--sb-color-purple-alternative': '#222163',
  '--sb-color-green': '#92eecd',
  '--sb-color-white': '#fff',
  '--sb-color-red': '#d8134b',
  '--sb-color-magenta': '#ff3c64',
  '--sb-color-orange': '#ff5b44',
  '--sb-color-yellow-dark': '#f7bf16',
  '--sb-color-yellow': '#ffef57',
  '--sb-color-green-dark-3': '#00785b',
  '--sb-color-green-dark-2': '#1e9f73',
  '--sb-color-violet': '#4e08bc',
  '--sb-color-violet-light': '#7129e2',
  '--sb-color-blue-dark-2': '#044ccc',
  '--sb-color-blue-dark': '#005cff',
  '--sb-color-blue': '#008eff',
  '--sb-color-orange-light': '#ff817b',
  '--sb-color-orange-light-2': '#ffd7d5',
  '--sb-color-orange-light-3': '#fff0ef',
  '--sb-color-magenta-light': '#ffb6d2',
  '--sb-color-magenta-light-2': '#ffdbe9',
  '--sb-color-magenta-light-3': '#fff5f9',
  '--sb-color-yellow-light': '#fff489',
  '--sb-color-yellow-light-2': '#fff9c4',
  '--sb-color-yellow-light-3': '#fffce5',
  '--sb-color-green-dark': '#64d7b4',
  '--sb-color-green-light': '#c8f6e5',
  '--sb-color-green-light-2': '#e5fff7',
  '--sb-color-violet-light-2': '#be99ff',
  '--sb-color-violet-light-3': '#e0d0ff',
  '--sb-color-violet-light-4': '#f1ebff',
  '--sb-color-blue-light': '#61b9ff',
  '--sb-color-blue-light-2': '#bfe3ff',
  '--sb-color-blue-light-3': '#ebf6ff',
  '--sb-spacing-x-small': '0.5rem',
  '--sb-spacing-small': '1rem',
  '--sb-spacing-medium': '1.5rem',
  '--sb-spacing-large': '2rem',
  '--sb-spacing-x-large': '3rem',
  '--sb-spacing-xx-large': '3.5rem',
  '--sb-layout-small': '40em',
  '--sb-layout-medium': '60em',
  '--sb-layout-large': '72em',
  '--sb-layout-x-large': '80em',
  '--sb-layout-xx-large': '90em',
  '--sb-shadow-small': '0 2px 4px rgba(38 35 66 / 12%)',
  '--sb-shadow-medium': '0 5px 20px rgba(38 35 66 / 10%)',
  '--sb-shadow-large': '0 5px 20px rgba(38 35 66 / 20%)',
  '--sb-shadow-hover': '0 20px 40px rgba(38 35 66 / 20%)',
  '--sb-easing-default': 'cubic-bezier(0.42, 0, 0, 1)',
  '--prose-max-width': '60ch',
  '--color-emerald-green-50': '#89aaac',
  '--color-emerald-green-25': '#c4d4d6',
  '--color-emerald-green-10': '#e8eeef',
  '--ca-font-family-heading': "'ArizonaFlare', var(--font-family-default)",
  '--ca-color-ocean-green': '#00343e',
  '--ca-color-burgundy-red': '#5c0022',
  '--ca-color-noir-green': '#001114',
  '--ca-color-sea-green': '#007272',
  '--ca-color-noir-red': '#24000d',
  '--ca-color-sober-red': '#8e4049',
  '--ca-color-classic-beige': '#f6eae4',
  '--ca-color-pale-green': '#ccf0e7',
  '--ca-color-pale-red': '#ffdedb',
  '--font-family-default': "'DNB', sans-serif",
  '--font-family-heading': 'var(--font-family-default)',
  '--font-family-monospace': "'DNBMono', 'Menlo', 'Consolas', 'Roboto Mono',",
  '--font-weight-default': 'normal',
  '--font-weight-basis': 'normal',
  '--font-weight-regular': 'normal',
  '--font-weight-medium': '500',
  '--font-weight-bold': '600',
  '--font-size-x-small': '0.875rem',
  '--font-size-small': '1rem',
  '--font-size-basis': '1.125rem',
  '--font-size-basis--em': '1em',
  '--font-size-lead': 'var(--font-size-medium)',
  '--font-size-medium': '1.25rem',
  '--font-size-large': '1.625rem',
  '--font-size-x-large': '2.125rem',
  '--font-size-xx-large': '3rem',
  '--line-height-xx-small--em': '1em',
  '--line-height-x-small': '1.125rem',
  '--line-height-small': '1.25rem',
  '--line-height-basis': '1.5rem',
  '--line-height-basis--em': '1.333em',
  '--line-height-lead': '1.5rem',
  '--line-height-medium': '2rem',
  '--line-height-large': '2.5rem',
  '--line-height-x-large': '3.5rem',
  '--line-height-xx-large': 'var(--line-height-x-large)',
  '--color-mint-green-50': '#d2f0e9',
  '--color-mint-green-25': '#e9f8f4',
  '--color-mint-green-12': '#f4fbf9',
  '--color-sea-green-30': '#b3d5d5',
  '--color-accent-yellow-30': '#feebc1',
  '--color-signal-orange': '#ff5400',
  '--color-fire-red': '#dc2a2a',
  '--color-success-green': '#007b5e',
  '--color-fire-red-8': '#fdeeee',
  '--color-black': '#000',
  '--color-black-80': '#333',
  '--color-black-55': '#737373',
  '--color-black-20': '#ccc',
  '--color-black-8': '#ebebeb',
  '--color-black-3': '#f8f8f8',
  '--color-white': '#fff',
  '--color-black-border': '#cdcdcd',
  '--color-black-background': '#fafafa',
  '--color-sea-green': '#007272',
  '--color-mint-green': '#a5e1d2',
  '--color-summer-green': '#28b482',
  '--color-emerald-green': '#14555a',
  '--color-ocean-green': '#00343e',
  '--color-accent-yellow': '#fdbb31',
  '--color-indigo': '#23195a',
  '--color-violet': '#6e2382',
  '--color-sky-blue': '#4bbed2',
  '--color-lavender': '#f2f2f5',
  '--color-sand-yellow': '#fbf6ec',
  '--color-pistachio': '#f2f4ec',
  '--color-mint-green-alt': '#ebfffa',
  '--color-indigo-medium': '#6e6491',
  '--color-indigo-light': '#b9afc8',
  '--color-violet-medium': '#a06eaf',
  '--color-violet-light': '#cfb9d7',
  '--color-sky-blue-medium': '#87d2e1',
  '--color-sky-blue-light': '#c3ebf0',
  '--spacing-xx-small': '0.25rem',
  '--spacing-x-small': '0.5rem',
  '--spacing-small': '1rem',
  '--spacing-medium': '1.5rem',
  '--spacing-large': '2rem',
  '--spacing-x-large': '3rem',
  '--spacing-xx-large': '3.5rem',
  '--layout-small': '40em',
  '--layout-medium': '60em',
  '--layout-large': '72em',
  '--layout-x-large': '80em',
  '--layout-xx-large': '90em',
  '--shadow-default': '0 8px 16px rgb(51 51 51 / 8%)',
  '--shadow-default-x': '0',
  '--shadow-default-y': '8px',
  '--shadow-default-blur-radius': '16px',
  '--shadow-default-color': 'rgb(51 51 51 / 8%)',
  '--shadow-sharp': '0 1px 6px rgb(0 0 0 / 16%)',
  '--shadow-sharp-x': '0',
  '--shadow-sharp-y': '1px',
  '--shadow-sharp-blur-radius': '6px',
  '--shadow-sharp-color': 'rgb(0 0 0 / 16%)',
  '--easing-default': 'cubic-bezier(0.42, 0, 0, 1)',
  '--internal-color-background-selected-subtle': '#e4eed7'
}; // prettier-ignore
"
`;

exports[`makePropertiesFile Tokens snapshots for carnegie 1`] = `
"/* This file is auto generated by makePropertiesFile.ts */

:root {
  --token-color-background-page-background: var(--carnegie-greyscale-0);
  --token-color-background-action: var(--carnegie-greyscale-1000);
  --token-color-background-action-hover: var(--carnegie-greyscale-800);
  --token-color-background-action-hover-subtle: var(
    --carnegie-greyscale-1000-5
  );
  --token-color-background-action-pressed: var(--carnegie-greyscale-1000);
  --token-color-background-action-pressed-subtle: var(
    --carnegie-greyscale-1000-10
  );
  --token-color-background-action-focus: var(--carnegie-blue-600);
  --token-color-background-action-focus-subtle: var(--carnegie-blue-100);
  --token-color-background-action-disabled: var(--carnegie-greyscale-200);
  --token-color-background-action-inverse: var(--carnegie-greyscale-300);
  --token-color-background-action-hover-inverse: var(
    --carnegie-greyscale-300
  );
  --token-color-background-action-hover-subtle-inverse: var(
    --carnegie-greyscale-1000
  );
  --token-color-background-action-pressed-subtle-inverse: var(
    --carnegie-greyscale-800
  );
  --token-color-background-action-ondark: var(--carnegie-greyscale-0);
  --token-color-background-action-hover-ondark: var(
    --carnegie-greyscale-0
  );
  --token-color-background-action-hover-subtle-ondark: var(
    --carnegie-greyscale-1000-30
  );
  --token-color-background-action-pressed-ondark: var(
    --carnegie-greyscale-0
  );
  --token-color-background-action-pressed-subtle-ondark: var(
    --carnegie-greyscale-1000-50
  );
  --token-color-background-action-disabled-ondark: var(
    --carnegie-greyscale-700
  );
  --token-color-background-action-alternative: var(
    --carnegie-greyscale-1000
  );
  --token-color-background-action-alternative-hover-subtle: var(
    --carnegie-greyscale-100
  );
  --token-color-background-selected: var(--carnegie-greyscale-1000);
  --token-color-background-selected-subtle: var(--carnegie-beige-200);
  --token-color-background-selected-ondark: var(--carnegie-greyscale-0);
  --token-color-background-selected-subtle-ondark: var(
    --carnegie-greyscale-1000
  );
  --token-color-background-neutral: var(--carnegie-greyscale-0);
  --token-color-background-neutral-solid: var(--carnegie-greyscale-0);
  --token-color-background-neutral-subtle: var(--carnegie-greyscale-50);
  --token-color-background-neutral-base: var(--carnegie-greyscale-100);
  --token-color-background-neutral-bold: var(--carnegie-greyscale-200);
  --token-color-background-neutral-alternative: var(--carnegie-blue-50);
  --token-color-background-info: var(--carnegie-coldgreen-600);
  --token-color-background-info-subtle: var(--carnegie-green-50);
  --token-color-background-positive: var(--carnegie-green-700);
  --token-color-background-positive-subtle: var(--carnegie-green-50);
  --token-color-background-warning: var(--carnegie-yellow-500);
  --token-color-background-warning-subtle: var(--carnegie-yellow-50);
  --token-color-background-error: var(--carnegie-red-600);
  --token-color-background-error-subtle: var(--carnegie-red-50);
  --token-color-background-marketing: var(--carnegie-greyscale-800);
  --token-color-background-marketing-subtle: var(--carnegie-blue-50);
  --token-color-text-action: var(--carnegie-greyscale-1000);
  --token-color-text-action-hover: var(--carnegie-greyscale-1000);
  --token-color-text-action-pressed: var(--carnegie-greyscale-1000);
  --token-color-text-action-focus: var(--carnegie-blue-600);
  --token-color-text-action-disabled: var(--carnegie-greyscale-200);
  --token-color-text-action-inverse: var(--carnegie-greyscale-0);
  --token-color-text-action-hover-inverse: var(--carnegie-greyscale-0);
  --token-color-text-action-pressed-inverse: var(--carnegie-greyscale-0);
  --token-color-text-selected: var(--carnegie-greyscale-800);
  --token-color-text-action-ondark: var(--carnegie-greyscale-0);
  --token-color-text-action-hover-ondark: var(--carnegie-greyscale-0);
  --token-color-text-action-pressed-ondark: var(--carnegie-greyscale-0);
  --token-color-text-action-disabled-ondark: var(--carnegie-greyscale-400);
  --token-color-text-action-alternative-ondark: var(
    --carnegie-greyscale-0
  );
  --token-color-text-neutral: var(--carnegie-greyscale-1000);
  --token-color-text-neutral-solid: var(--carnegie-greyscale-1000);
  --token-color-text-neutral-alternative: var(--carnegie-greyscale-500);
  --token-color-text-neutral-inverse: var(--carnegie-greyscale-0);
  --token-color-text-neutral-ondark: var(--carnegie-greyscale-0);
  --token-color-text-neutral-subtle: var(--carnegie-greyscale-200);
  --token-color-text-neutral-subtle-solid: var(--carnegie-greyscale-200);
  --token-color-text-destructive: var(--carnegie-red-600);
  --token-color-text-destructive-inverse: var(--carnegie-orange-600);
  --token-color-text-warning-bold: var(--carnegie-yellow-800);
  --token-color-text-warning-bold-inverse: var(--carnegie-yellow-500);
  --token-color-text-positive: var(--carnegie-green-700);
  --token-color-text-positive-inverse: var(--carnegie-green-600);
  --token-color-icon-action: var(--carnegie-greyscale-1000);
  --token-color-icon-action-hover: var(--carnegie-greyscale-1000);
  --token-color-icon-action-pressed: var(--carnegie-greyscale-1000);
  --token-color-icon-action-focused: var(--carnegie-blue-600);
  --token-color-icon-action-disabled: var(--carnegie-greyscale-200);
  --token-color-icon-action-inverse: var(--carnegie-greyscale-0);
  --token-color-icon-action-hover-inverse: var(--carnegie-greyscale-0);
  --token-color-icon-action-pressed-inverse: var(--carnegie-greyscale-0);
  --token-color-icon-selected: var(--carnegie-greyscale-1000);
  --token-color-icon-selected-ondark: var(--carnegie-greyscale-100);
  --token-color-icon-action-ondark: var(--carnegie-greyscale-0);
  --token-color-icon-action-alternative-ondark: var(
    --carnegie-greyscale-0
  );
  --token-color-icon-action-hover-ondark: var(--carnegie-greyscale-0);
  --token-color-icon-action-pressed-ondark: var(--carnegie-greyscale-0);
  --token-color-icon-action-disabled-ondark: var(--carnegie-greyscale-400);
  --token-color-icon-neutral: var(--carnegie-greyscale-1000);
  --token-color-icon-neutral-inverse: var(--carnegie-greyscale-0);
  --token-color-icon-neutral-ondark: var(--carnegie-greyscale-0);
  --token-color-icon-neutral-solid: var(--carnegie-greyscale-1000);
  --token-color-icon-neutral-alternative: var(--carnegie-greyscale-500);
  --token-color-icon-destructive: var(--carnegie-red-600);
  --token-color-icon-marketing: var(--carnegie-greyscale-800);
  --token-color-stroke-action: var(--carnegie-greyscale-1000);
  --token-color-stroke-action-alternative: var(--carnegie-greyscale-1000);
  --token-color-stroke-action-hover: var(--carnegie-greyscale-1000);
  --token-color-stroke-action-pressed: var(--carnegie-greyscale-700);
  --token-color-stroke-action-inverse: var(--carnegie-greyscale-0);
  --token-color-stroke-action-hover-inverse: var(--carnegie-greyscale-0);
  --token-color-stroke-action-pressed-inverse: var(
    --carnegie-greyscale-400
  );
  --token-color-stroke-action-focus: var(--carnegie-blue-600);
  --token-color-stroke-action-focus-subtle: var(--carnegie-blue-100);
  --token-color-stroke-action-disabled: var(--carnegie-greyscale-200);
  --token-color-stroke-selected: var(--carnegie-greyscale-1000);
  --token-color-stroke-selected-ondark: var(--carnegie-greyscale-300);
  --token-color-stroke-action-ondark: var(--carnegie-greyscale-0);
  --token-color-stroke-action-alternative-ondark: var(
    --carnegie-greyscale-200
  );
  --token-color-stroke-action-hover-ondark: var(--carnegie-greyscale-0);
  --token-color-stroke-action-pressed-ondark: var(--carnegie-greyscale-0);
  --token-color-stroke-action-disabled-ondark: var(
    --carnegie-greyscale-600
  );
  --token-color-stroke-neutral: var(--carnegie-beige-300);
  --token-color-stroke-neutral-ondark: var(--carnegie-greyscale-0);
  --token-color-stroke-neutral-subtle: var(--carnegie-beige-200);
  --token-color-stroke-neutral-bold: var(--carnegie-greyscale-1000);
  --token-color-stroke-neutral-alternative: var(--carnegie-greyscale-200);
  --token-color-stroke-info: var(--carnegie-coldgreen-600);
  --token-color-stroke-positive: var(--carnegie-green-700);
  --token-color-stroke-warning: var(--carnegie-yellow-500);
  --token-color-stroke-error: var(--carnegie-red-600);
  --token-color-stroke-marketing: var(--carnegie-greyscale-800);
  --token-color-decorative-first-muted: var(--carnegie-beige-50);
  --token-color-decorative-first-muted-solid: var(--carnegie-beige-50);
  --token-color-decorative-first-subtle: var(--carnegie-beige-200);
  --token-color-decorative-first-subtle-solid: var(--carnegie-beige-200);
  --token-color-decorative-first-base: var(--carnegie-beige-500);
  --token-color-decorative-first-base-solid: var(--carnegie-beige-500);
  --token-color-decorative-first-bold: var(--carnegie-beige-800);
  --token-color-decorative-first-bold-solid: var(--carnegie-beige-800);
  --token-color-decorative-first-intense: var(--carnegie-beige-950);
  --token-color-decorative-first-intense-solid: var(--carnegie-beige-950);
  --token-color-decorative-second-muted: var(--carnegie-burgundy-100);
  --token-color-decorative-second-muted-solid: var(
    --carnegie-burgundy-100
  );
  --token-color-decorative-second-subtle: var(--carnegie-burgundy-300);
  --token-color-decorative-second-subtle-solid: var(
    --carnegie-burgundy-300
  );
  --token-color-decorative-second-base: var(--carnegie-burgundy-500);
  --token-color-decorative-second-base-solid: var(--carnegie-burgundy-500);
  --token-color-decorative-second-bold: var(--carnegie-burgundy-900);
  --token-color-decorative-second-bold-solid: var(--carnegie-burgundy-900);
  --token-color-decorative-second-intense: var(--carnegie-burgundy-950);
  --token-color-decorative-second-intense-solid: var(
    --carnegie-burgundy-950
  );
  --token-color-decorative-third-muted: var(--carnegie-coldgreen-100);
  --token-color-decorative-third-muted-solid: var(--carnegie-green-100);
  --token-color-decorative-third-subtle: var(--carnegie-coldgreen-300);
  --token-color-decorative-third-subtle-solid: var(
    --carnegie-coldgreen-300
  );
  --token-color-decorative-third-base: var(--carnegie-coldgreen-500);
  --token-color-decorative-third-base-solid: var(--carnegie-coldgreen-500);
  --token-color-decorative-third-bold: var(--carnegie-coldgreen-700);
  --token-color-decorative-third-bold-solid: var(--carnegie-coldgreen-700);
  --token-color-decorative-third-intense: var(--carnegie-coldgreen-950);
  --token-color-decorative-third-intense-solid: var(
    --carnegie-coldgreen-950
  );
  --token-color-component-button-background-action: var(
    --carnegie-greyscale-1000
  );
  --token-color-component-button-background-action-hover: var(
    --carnegie-greyscale-1000
  );
  --token-color-component-button-background-action-destructive: var(
    --carnegie-red-600
  );
  --token-color-component-button-background-action-destructive-hover: var(
    --carnegie-red-600
  );
  --token-color-component-button-background-action-destructive-hover-subtle: var(
    --carnegie-red-50
  );
  --token-color-component-button-background-action-destructive-pressed: var(
    --carnegie-red-700
  );
  --token-color-component-button-background-action-destructive-pressed-subtle: var(
    --carnegie-red-100
  );
  --token-color-component-button-text-neutral: var(--carnegie-greyscale-0);
  --token-color-component-button-text-neutral-inverse: var(
    --carnegie-greyscale-1000
  );
  --token-color-component-button-text-neutral-ondark: var(
    --carnegie-greyscale-1000
  );
  --token-color-component-button-text-action: var(
    --carnegie-greyscale-1000
  );
  --token-color-component-button-text-action-hover: var(
    --carnegie-greyscale-1000
  );
  --token-color-component-button-text-action-inverse: var(
    --carnegie-greyscale-0
  );
  --token-color-component-button-text-action-hover-inverse: var(
    --carnegie-greyscale-0
  );
  --token-color-component-button-text-action-ondark: var(
    --carnegie-greyscale-0
  );
  --token-color-component-button-text-action-hover-ondark: var(
    --carnegie-greyscale-0
  );
  --token-color-component-button-text-action-disabled: var(
    --carnegie-greyscale-0
  );
  --token-color-component-button-text-neutral-destructive: var(
    --carnegie-greyscale-0
  );
  --token-color-component-button-text-action-destructive: var(
    --carnegie-red-600
  );
  --token-color-component-button-text-action-destructive-hover: var(
    --carnegie-red-600
  );
  --token-color-component-button-text-action-destructive-pressed: var(
    --carnegie-red-700
  );
  --token-color-component-button-icon-neutral: var(--carnegie-greyscale-0);
  --token-color-component-button-icon-neutral-ondark: var(
    --carnegie-greyscale-1000
  );
  --token-color-component-button-icon-action: var(
    --carnegie-greyscale-1000
  );
  --token-color-component-button-icon-action-hover: var(
    --carnegie-greyscale-1000
  );
  --token-color-component-button-icon-action-disabled: var(
    --carnegie-greyscale-0
  );
  --token-color-component-button-icon-neutral-destructive: var(
    --carnegie-greyscale-0
  );
  --token-color-component-button-icon-action-destructive: var(
    --carnegie-red-600
  );
  --token-color-component-button-icon-action-destructive-hover: var(
    --carnegie-red-600
  );
  --token-color-component-button-icon-action-destructive-pressed: var(
    --carnegie-red-700
  );
  --token-color-component-button-stroke-action: var(
    --carnegie-greyscale-1000
  );
  --token-color-component-button-stroke-action-hover: var(
    --carnegie-greyscale-1000
  );
  --token-color-component-button-stroke-action-destructive: var(
    --carnegie-red-600
  );
  --token-color-component-button-stroke-action-destructive-hover: var(
    --carnegie-red-600
  );
  --token-color-component-button-stroke-action-destructive-pressed: var(
    --carnegie-red-700
  );
  --token-color-component-button-stroke-selected-wip: var(
    --carnegie-beige-700
  );
  --token-color-component-tooltip-background-neutral: var(
    --carnegie-greyscale-800
  );
  --token-color-component-table-background-neutral-alternative: var(
    --carnegie-greyscale-25
  );
  --token-color-component-dimmer-background: var(--dnb-greyscale-1000-30);
  --token-color-component-switch-action-disabled-ondark: var(
    --carnegie-greyscale-800
  );
  --token-color-component-progressbar-neutral-onsubtle: var(
    --carnegie-greyscale-200
  );
}
"
`;

exports[`makePropertiesFile Tokens snapshots for foundation 1`] = `
"/* This file is auto generated by makePropertiesFile.ts */

:root {
  --dnb-coldgreen-50: #f4fbf9;
  --dnb-coldgreen-100-40: rgba(#ddf2ec, 0.4);
  --dnb-coldgreen-100: #d8f3ec;
  --dnb-coldgreen-200: #bce8dc;
  --dnb-coldgreen-300-40: rgba(#a5e1d2, 0.4);
  --dnb-coldgreen-300: #a5e1d2;
  --dnb-coldgreen-400: #5cbdad;
  --dnb-coldgreen-500: #4a948d;
  --dnb-coldgreen-600-40: rgba(#007272, 0.4);
  --dnb-coldgreen-600: #007272;
  --dnb-coldgreen-700-40: rgba(#14555a, 0.4);
  --dnb-coldgreen-700: #14555a;
  --dnb-coldgreen-800-40: rgba(#08454d, 0.4);
  --dnb-coldgreen-800: #08454d;
  --dnb-coldgreen-900: #023939;
  --dnb-coldgreen-950-40: rgba(#00343e, 0.4);
  --dnb-coldgreen-950: #00343e;
  --dnb-warmgreen-50: #f2f4ec;
  --dnb-warmgreen-100: #e4eed7;
  --dnb-warmgreen-200: #d4ecc5;
  --dnb-warmgreen-300: #bce5ac;
  --dnb-warmgreen-400: #9fd78e;
  --dnb-warmgreen-500: #80ba77;
  --dnb-warmgreen-600: #729561;
  --dnb-warmgreen-700: #5d7650;
  --dnb-warmgreen-800: #4c6142;
  --dnb-warmgreen-900: #3b4736;
  --dnb-warmgreen-950: #2b3328;
  --dnb-green-50: #ebf4f2;
  --dnb-green-100: #dcf3e8;
  --dnb-green-200: #c9f0dd;
  --dnb-green-300: #b9e7ce;
  --dnb-green-400: #88dab3;
  --dnb-green-500: #47d197;
  --dnb-green-600: #28b482;
  --dnb-green-700: #007b5e;
  --dnb-green-800: #005843;
  --dnb-green-900: #0d4637;
  --dnb-green-950: #1c342d;
  --dnb-red-50: #fceeee;
  --dnb-red-100: #fcdddd;
  --dnb-red-200: #facdcd;
  --dnb-red-300: #fbacac;
  --dnb-red-400: #f68888;
  --dnb-red-500: #ed4c4c;
  --dnb-red-600-40: rgba(#d52525, 0.4);
  --dnb-red-600: #d52525;
  --dnb-red-700: #b21e1e;
  --dnb-red-800: #7a1313;
  --dnb-red-900: #541515;
  --dnb-red-950: #401a1a;
  --dnb-orange-50: #fff2f2;
  --dnb-orange-100: #ffeae0;
  --dnb-orange-200: #fdc;
  --dnb-orange-300: #fb9;
  --dnb-orange-400: #ff9866;
  --dnb-orange-500: #ff7633;
  --dnb-orange-600-40: rgba(#ec612a, 0.4);
  --dnb-orange-600: #ff5400;
  --dnb-orange-700: #cc4300;
  --dnb-orange-800: #993200;
  --dnb-orange-900: #662505;
  --dnb-orange-950: #4d1e08;
  --dnb-yellow-50: #fbf6ec;
  --dnb-yellow-100: #fdf4e0;
  --dnb-yellow-200: #ffedc8;
  --dnb-yellow-300: #fce1a9;
  --dnb-yellow-400: #fad280;
  --dnb-yellow-500: #fdbb31;
  --dnb-yellow-600: #d99710;
  --dnb-yellow-700: #b37b07;
  --dnb-yellow-800: #805b0e;
  --dnb-yellow-900: #5f450f;
  --dnb-yellow-950: #3d2e0f;
  --dnb-gold-50: #f9f4e9;
  --dnb-gold-100: #f6ecd3;
  --dnb-gold-200: #ebe1c0;
  --dnb-gold-300-40: rgba(#d8c583, 0.4);
  --dnb-gold-300: #d8c583;
  --dnb-gold-400: #caab51;
  --dnb-gold-500: #a3882a;
  --dnb-gold-600-40: rgba(#87701d, 0.4);
  --dnb-gold-600: #87701d;
  --dnb-gold-700: #685419;
  --dnb-gold-800: #4e3f13;
  --dnb-gold-900: #2f2509;
  --dnb-gold-950: #1f1b10;
  --dnb-blue-50: #f2f2f5;
  --dnb-blue-100: #e1e9f9;
  --dnb-blue-200: #cddbf4;
  --dnb-blue-300: #a9c0ef;
  --dnb-blue-400: #7da4e8;
  --dnb-blue-500: #4784e1;
  --dnb-blue-600: #276ace;
  --dnb-blue-700: #1955a9;
  --dnb-blue-800: #153f7f;
  --dnb-blue-900: #16315a;
  --dnb-blue-950: #152640;
  --dnb-purple-50: #f2f2f5;
  --dnb-purple-100: #e4e4f1;
  --dnb-purple-200: #d6d6eb;
  --dnb-purple-300: #b8b8e0;
  --dnb-purple-400: #9b9bd4;
  --dnb-purple-500: #7d7dd4;
  --dnb-purple-600: #66c;
  --dnb-purple-700: #3c3caa;
  --dnb-purple-800: #2c2c7d;
  --dnb-purple-900: #23195a;
  --dnb-purple-950: #1d1740;
  --dnb-greyscale-0-30: rgba(#fff, 0.3);
  --dnb-greyscale-0-40: rgba(#fff, 0.4);
  --dnb-greyscale-0: #fff;
  --dnb-greyscale-25: #fafafa;
  --dnb-greyscale-50: #f8f8f8;
  --dnb-greyscale-100: #ebebeb;
  --dnb-greyscale-200: #ccc;
  --dnb-greyscale-300: #b1b1b5;
  --dnb-greyscale-400: #8e8e93;
  --dnb-greyscale-500: #737373;
  --dnb-greyscale-600: #636366;
  --dnb-greyscale-700: #48484a;
  --dnb-greyscale-800-40: rgba(#333, 0.4);
  --dnb-greyscale-800-60: rgba(#333, 0.6);
  --dnb-greyscale-800: #333;
  --dnb-greyscale-900: #2c2c2e;
  --dnb-greyscale-950: #1c1c1e;
  --dnb-greyscale-1000-20: rgba(#000, 0.2);
  --dnb-greyscale-1000-30: rgba(#000, 0.3);
  --dnb-greyscale-1000-48: rgba(#000, 0.48);
  --dnb-greyscale-1000: #000;
  --sbanken-purple-50: #fbf9ff;
  --sbanken-purple-100: #f1ebff;
  --sbanken-purple-200: #e0d0ff;
  --sbanken-purple-300-40: rgba(#d2baff, 0.4);
  --sbanken-purple-300: #d2baff;
  --sbanken-purple-400: #be99ff;
  --sbanken-purple-500: #9761f1;
  --sbanken-purple-600: #7129e2;
  --sbanken-purple-700-40: rgba(#4e08bc, 0.4);
  --sbanken-purple-700: #4e08bc;
  --sbanken-purple-800: #302480;
  --sbanken-purple-900-40: rgba(#222163, 0.4);
  --sbanken-purple-900: #222163;
  --sbanken-purple-950: #1c1b4e;
  --sbanken-purple-1000: #18172a;
  --sbanken-green-50: #f4fffb;
  --sbanken-green-100: #e5fff7;
  --sbanken-green-200: #c8f6e5;
  --sbanken-green-300-40: rgba(#92eecd, 0.4);
  --sbanken-green-300: #92eecd;
  --sbanken-green-400: #64d7b4;
  --sbanken-green-500: #37b992;
  --sbanken-green-600: #1e9f73;
  --sbanken-green-700: #00785b;
  --sbanken-green-800: #145b43;
  --sbanken-green-900: #16342d;
  --sbanken-green-950: #0d1f1b;
  --sbanken-red-50: #fff5f9;
  --sbanken-red-100: #ffecf3;
  --sbanken-red-200: #ffdbe9;
  --sbanken-red-300: #ffb6d2;
  --sbanken-red-400: #ff83b2;
  --sbanken-red-500: #ff5c83;
  --sbanken-red-600: #ff3c64;
  --sbanken-red-700: #d8134b;
  --sbanken-red-800: #9a0f2c;
  --sbanken-red-900: #650213;
  --sbanken-red-950: #3c010b;
  --sbanken-orange-50: #fff7f6;
  --sbanken-orange-100: #ffedec;
  --sbanken-orange-200: #ffd7d5;
  --sbanken-orange-300: #ffaeae;
  --sbanken-orange-400: #ff817b;
  --sbanken-orange-500-40: rgba(#ff5b44, 0.4);
  --sbanken-orange-500: #ff5b44;
  --sbanken-orange-600: #ff361b;
  --sbanken-orange-700-40: rgba(#df280f, 0.4);
  --sbanken-orange-700: #df280f;
  --sbanken-orange-800: #a02615;
  --sbanken-orange-900: #591703;
  --sbanken-orange-950: #350e02;
  --sbanken-yellow-50: #fffce5;
  --sbanken-yellow-100: #fff9c4;
  --sbanken-yellow-200: #fff7a7;
  --sbanken-yellow-300: #fff489;
  --sbanken-yellow-400: #ffef57;
  --sbanken-yellow-500: #fcdc3d;
  --sbanken-yellow-600: #f7bf16;
  --sbanken-yellow-700: #d19e07;
  --sbanken-yellow-800: #816209;
  --sbanken-yellow-900: #533e00;
  --sbanken-yellow-950: #312500;
  --sbanken-blue-50: #f5fbff;
  --sbanken-blue-100: #ebf6ff;
  --sbanken-blue-200: #bfe3ff;
  --sbanken-blue-300: #8bcbfd;
  --sbanken-blue-400: #61b9ff;
  --sbanken-blue-500: #008eef;
  --sbanken-blue-600: #005cff;
  --sbanken-blue-700: #044ccc;
  --sbanken-blue-800: #0b3a8d;
  --sbanken-blue-900: #032c75;
  --sbanken-blue-950: #021a45;
  --sbanken-grey-0-30: rgba(#fff, 0.3);
  --sbanken-grey-0: #fff;
  --sbanken-grey-25: #fcfcfd;
  --sbanken-grey-50: #f9f9fd;
  --sbanken-grey-100: #f2f2f7;
  --sbanken-grey-200: #ebebf1;
  --sbanken-grey-300: #d9d9e4;
  --sbanken-grey-400: #c0c0d1;
  --sbanken-grey-500: #9090a3;
  --sbanken-grey-600: #666578;
  --sbanken-grey-700: #4a4a5b;
  --sbanken-grey-800-60: rgba(#3a3a4a, 0.6);
  --sbanken-grey-800: #3a3a4a;
  --sbanken-grey-900: #21202d;
  --sbanken-grey-950: #161620;
  --sbanken-grey-1000-20: rgba(#000, 0.2);
  --sbanken-grey-1000-30: rgba(#000, 0.3);
  --sbanken-grey-1000-48: rgba(#000, 0.48);
  --sbanken-grey-1000: #000;
  --carnegie-coldgreen-50: #f4fbf9;
  --carnegie-coldgreen-100: #ddf2ec;
  --carnegie-coldgreen-200: #ccf0e7;
  --carnegie-coldgreen-300: #a5e1d2;
  --carnegie-coldgreen-400: #5cbdad;
  --carnegie-coldgreen-500: #24968d;
  --carnegie-coldgreen-600: #007272;
  --carnegie-coldgreen-700: #14555a;
  --carnegie-coldgreen-800: #08454d;
  --carnegie-coldgreen-900: #023939;
  --carnegie-coldgreen-950: #00343e;
  --carnegie-coldgreen-1000: #001114;
  --carnegie-green-50: #ebf4f2;
  --carnegie-green-100: #dcf3e8;
  --carnegie-green-200: #c9f0dd;
  --carnegie-green-300: #b9e7ce;
  --carnegie-green-400: #88dab3;
  --carnegie-green-500: #47d197;
  --carnegie-green-600: #28b482;
  --carnegie-green-700: #007b5e;
  --carnegie-green-800: #005843;
  --carnegie-green-900: #0d4637;
  --carnegie-green-950: #1c342d;
  --carnegie-burgundy-50: #fcedeb;
  --carnegie-burgundy-100: #ffdedb;
  --carnegie-burgundy-200: #f0c7c5;
  --carnegie-burgundy-300: #e2a2a5;
  --carnegie-burgundy-400: #cd8288;
  --carnegie-burgundy-500: #b66d73;
  --carnegie-burgundy-600: #8e4049;
  --carnegie-burgundy-700: #84444a;
  --carnegie-burgundy-800: #6b3136;
  --carnegie-burgundy-900: #5c0022;
  --carnegie-burgundy-950: #24000d;
  --carnegie-beige-50: #fdfbf9;
  --carnegie-beige-100: #faf4f0;
  --carnegie-beige-200: #f6eae4;
  --carnegie-beige-300: #dbcdc5;
  --carnegie-beige-400: #cbb5aa;
  --carnegie-beige-500: #b5a197;
  --carnegie-beige-600: #9f8d84;
  --carnegie-beige-700: #897971;
  --carnegie-beige-800: #73655e;
  --carnegie-beige-900: #5e524c;
  --carnegie-beige-950: #4a3f3a;
  --carnegie-yellow-50: #fbf6ec;
  --carnegie-yellow-100: #fdf4e0;
  --carnegie-yellow-200: #ffedc8;
  --carnegie-yellow-300: #fce1a9;
  --carnegie-yellow-400: #fad280;
  --carnegie-yellow-500: #fdbb31;
  --carnegie-yellow-600: #d99710;
  --carnegie-yellow-700: #b37b07;
  --carnegie-yellow-800: #805b0e;
  --carnegie-yellow-900: #5f450f;
  --carnegie-yellow-950: #3d2e0f;
  --carnegie-orange-50: #fff2f2;
  --carnegie-orange-100: #ffeae0;
  --carnegie-orange-200: #fdc;
  --carnegie-orange-300: #fb9;
  --carnegie-orange-400: #ff9866;
  --carnegie-orange-500: #ff7633;
  --carnegie-orange-600-40: rgba(#ec612a, 0.4);
  --carnegie-orange-600: #ff5400;
  --carnegie-orange-700: #cc4300;
  --carnegie-orange-800: #993200;
  --carnegie-orange-900: #662505;
  --carnegie-orange-950: #4d1e08;
  --carnegie-red-50: #fceeee;
  --carnegie-red-100: #fcdddd;
  --carnegie-red-200: #facdcd;
  --carnegie-red-300: #fbacac;
  --carnegie-red-400: #f68888;
  --carnegie-red-500: #ed4c4c;
  --carnegie-red-600-40: rgba(#d52525, 0.4);
  --carnegie-red-600: #d52525;
  --carnegie-red-700: #b21e1e;
  --carnegie-red-800: #7a1313;
  --carnegie-red-900: #541515;
  --carnegie-red-950: #401a1a;
  --carnegie-blue-50: #f2f2f5;
  --carnegie-blue-100: #e1e9f9;
  --carnegie-blue-200: #cddbf4;
  --carnegie-blue-300: #a9c0ef;
  --carnegie-blue-400: #7da4e8;
  --carnegie-blue-500: #4784e1;
  --carnegie-blue-600: #276ace;
  --carnegie-blue-700: #1955a9;
  --carnegie-blue-800: #153f7f;
  --carnegie-blue-900: #16315a;
  --carnegie-blue-950: #152640;
  --carnegie-greyscale-0-80: rgba(#fff, 0.8);
  --carnegie-greyscale-0: #fff;
  --carnegie-greyscale-25: #fafafa;
  --carnegie-greyscale-50: #f8f8f8;
  --carnegie-greyscale-100: #ebebeb;
  --carnegie-greyscale-200: #ccc;
  --carnegie-greyscale-300: #b1b1b5;
  --carnegie-greyscale-400: #8e8e93;
  --carnegie-greyscale-500: #737373;
  --carnegie-greyscale-600: #636366;
  --carnegie-greyscale-700: #48484a;
  --carnegie-greyscale-800: #333;
  --carnegie-greyscale-900: #2c2c2e;
  --carnegie-greyscale-950: #1c1c1e;
  --carnegie-greyscale-1000-5: rgba(#000, 0.05);
  --carnegie-greyscale-1000-10: rgba(#000, 0.1);
  --carnegie-greyscale-1000-30: rgba(#000, 0.3);
  --carnegie-greyscale-1000-50: rgba(#000, 0.5);
  --carnegie-greyscale-1000: #000;
}
"
`;

exports[`makePropertiesFile Tokens snapshots for sbanken 1`] = `
"/* This file is auto generated by makePropertiesFile.ts */

:root {
  --token-color-background-page-background: var(--sbanken-grey-0);
  --token-color-background-action: var(--sbanken-purple-700);
  --token-color-background-action-hover: var(--sbanken-purple-700);
  --token-color-background-action-hover-subtle: var(--sbanken-purple-100);
  --token-color-background-action-pressed: var(--sbanken-purple-950);
  --token-color-background-action-pressed-subtle: var(
    --sbanken-purple-200
  );
  --token-color-background-action-focus: var(--sbanken-blue-600);
  --token-color-background-action-focus-subtle: var(--sbanken-blue-100);
  --token-color-background-action-disabled: var(--sbanken-grey-400);
  --token-color-background-action-inverse: var(--sbanken-green-300);
  --token-color-background-action-hover-inverse: var(--sbanken-green-300);
  --token-color-background-action-hover-subtle-inverse: var(
    --sbanken-purple-900
  );
  --token-color-background-action-pressed-subtle-inverse: var(
    --sbanken-purple-950
  );
  --token-color-background-action-ondark: var(--sbanken-green-300);
  --token-color-background-action-hover-ondark: var(--sbanken-green-300);
  --token-color-background-action-hover-subtle-ondark: var(
    --dnb-green-900
  );
  --token-color-background-action-pressed-ondark: var(--sbanken-green-400);
  --token-color-background-action-pressed-subtle-ondark: var(
    --sbanken-green-950
  );
  --token-color-background-action-disabled-ondark: var(--sbanken-grey-600);
  --token-color-background-action-alternative: var(--sbanken-grey-500);
  --token-color-background-action-alternative-hover-subtle: var(
    --sbanken-grey-100
  );
  --token-color-background-selected: var(--sbanken-purple-950);
  --token-color-background-selected-subtle: var(--sbanken-purple-100);
  --token-color-background-selected-ondark: var(--sbanken-green-100);
  --token-color-background-selected-subtle-ondark: var(
    --sbanken-green-900
  );
  --token-color-background-neutral: var(--sbanken-grey-0);
  --token-color-background-neutral-solid: var(--sbanken-grey-0);
  --token-color-background-neutral-subtle: var(--sbanken-grey-100);
  --token-color-background-neutral-base: var(--sbanken-grey-100);
  --token-color-background-neutral-bold: var(--sbanken-grey-300);
  --token-color-background-neutral-alternative: var(--sbanken-grey-100);
  --token-color-background-info: var(--sbanken-green-600);
  --token-color-background-info-subtle: var(--sbanken-green-50);
  --token-color-background-positive: var(--sbanken-green-700);
  --token-color-background-positive-subtle: var(--sbanken-green-100);
  --token-color-background-warning: var(--sbanken-yellow-600);
  --token-color-background-warning-subtle: var(--sbanken-yellow-50);
  --token-color-background-error: var(--sbanken-red-700);
  --token-color-background-error-subtle: var(--sbanken-red-200);
  --token-color-background-marketing: var(--sbanken-purple-900);
  --token-color-background-marketing-subtle: var(--sbanken-purple-100);
  --token-color-text-action: var(--sbanken-purple-700);
  --token-color-text-action-hover: var(--sbanken-purple-700);
  --token-color-text-action-pressed: var(--sbanken-purple-900);
  --token-color-text-action-focus: var(--sbanken-blue-600);
  --token-color-text-action-disabled: var(--sbanken-grey-300);
  --token-color-text-action-inverse: var(--sbanken-green-300);
  --token-color-text-action-hover-inverse: var(--sbanken-green-300);
  --token-color-text-action-pressed-inverse: var(--sbanken-green-400);
  --token-color-text-selected: var(--sbanken-purple-950);
  --token-color-text-action-ondark: var(--sbanken-green-300);
  --token-color-text-action-hover-ondark: var(--sbanken-green-300);
  --token-color-text-action-pressed-ondark: var(--sbanken-green-400);
  --token-color-text-action-disabled-ondark: var(--sbanken-grey-500);
  --token-color-text-action-alternative-ondark: var(--sbanken-grey-0);
  --token-color-text-neutral: var(--sbanken-purple-1000);
  --token-color-text-neutral-solid: var(--sbanken-purple-1000);
  --token-color-text-neutral-alternative: var(--sbanken-grey-600);
  --token-color-text-neutral-inverse: var(--sbanken-grey-0);
  --token-color-text-neutral-ondark: var(--sbanken-grey-0);
  --token-color-text-neutral-subtle: var(--sbanken-grey-600);
  --token-color-text-neutral-subtle-solid: var(--sbanken-grey-200);
  --token-color-text-destructive: var(--sbanken-orange-800);
  --token-color-text-destructive-inverse: var(--sbanken-orange-500);
  --token-color-text-warning-bold: var(--sbanken-yellow-800);
  --token-color-text-warning-bold-inverse: var(--sbanken-yellow-600);
  --token-color-text-positive: var(--sbanken-green-700);
  --token-color-text-positive-inverse: var(--sbanken-green-600);
  --token-color-icon-action: var(--sbanken-purple-700);
  --token-color-icon-action-hover: var(--sbanken-purple-700);
  --token-color-icon-action-pressed: var(--sbanken-purple-900);
  --token-color-icon-action-focused: var(--sbanken-blue-600);
  --token-color-icon-action-disabled: var(--sbanken-grey-300);
  --token-color-icon-action-inverse: var(--sbanken-green-300);
  --token-color-icon-action-hover-inverse: var(--sbanken-green-300);
  --token-color-icon-action-pressed-inverse: var(--sbanken-green-300);
  --token-color-icon-selected: var(--sbanken-purple-950);
  --token-color-icon-selected-ondark: var(--sbanken-green-400);
  --token-color-icon-action-ondark: var(--sbanken-green-300);
  --token-color-icon-action-alternative-ondark: var(--sbanken-grey-0);
  --token-color-icon-action-hover-ondark: var(--sbanken-green-300);
  --token-color-icon-action-pressed-ondark: var(--sbanken-green-400);
  --token-color-icon-action-disabled-ondark: var(--sbanken-grey-500);
  --token-color-icon-neutral: var(--sbanken-purple-1000);
  --token-color-icon-neutral-inverse: var(--sbanken-grey-0);
  --token-color-icon-neutral-ondark: var(--sbanken-grey-0);
  --token-color-icon-neutral-solid: var(--sbanken-purple-1000);
  --token-color-icon-neutral-alternative: var(--sbanken-grey-600);
  --token-color-icon-destructive: var(--sbanken-orange-700);
  --token-color-icon-marketing: var(--sbanken-purple-900);
  --token-color-stroke-action: var(--sbanken-purple-700);
  --token-color-stroke-action-alternative: var(--sbanken-grey-500);
  --token-color-stroke-action-hover: var(--sbanken-purple-700);
  --token-color-stroke-action-pressed: var(--sbanken-purple-950);
  --token-color-stroke-action-inverse: var(--sbanken-green-300);
  --token-color-stroke-action-hover-inverse: var(--sbanken-green-300);
  --token-color-stroke-action-pressed-inverse: var(--sbanken-green-500);
  --token-color-stroke-action-focus: var(--sbanken-blue-600);
  --token-color-stroke-action-focus-subtle: var(--sbanken-blue-100);
  --token-color-stroke-action-disabled: var(--sbanken-grey-300);
  --token-color-stroke-selected: var(--sbanken-purple-950);
  --token-color-stroke-selected-ondark: var(--sbanken-green-100);
  --token-color-stroke-action-ondark: var(--sbanken-green-300);
  --token-color-stroke-action-alternative-ondark: var(--sbanken-grey-400);
  --token-color-stroke-action-hover-ondark: var(--sbanken-green-300);
  --token-color-stroke-action-pressed-ondark: var(--sbanken-green-400);
  --token-color-stroke-action-disabled-ondark: var(--sbanken-grey-600);
  --token-color-stroke-neutral: var(--sbanken-purple-900);
  --token-color-stroke-neutral-ondark: var(--sbanken-grey-0);
  --token-color-stroke-neutral-subtle: var(--sbanken-grey-300);
  --token-color-stroke-neutral-bold: var(--sbanken-grey-300);
  --token-color-stroke-neutral-alternative: var(--sbanken-grey-300);
  --token-color-stroke-info: var(--sbanken-green-600);
  --token-color-stroke-positive: var(--sbanken-green-700);
  --token-color-stroke-warning: var(--sbanken-yellow-600);
  --token-color-stroke-error: var(--sbanken-red-700);
  --token-color-stroke-marketing: var(--sbanken-purple-900);
  --token-color-decorative-first-muted: var(--sbanken-purple-100);
  --token-color-decorative-first-muted-solid: var(--sbanken-purple-100);
  --token-color-decorative-first-subtle: var(--sbanken-purple-300);
  --token-color-decorative-first-subtle-solid: var(--sbanken-purple-300);
  --token-color-decorative-first-base: var(--sbanken-purple-600);
  --token-color-decorative-first-base-solid: var(--sbanken-purple-600);
  --token-color-decorative-first-bold: var(--sbanken-purple-700);
  --token-color-decorative-first-bold-solid: var(--sbanken-purple-700);
  --token-color-decorative-first-intense: var(--sbanken-purple-900);
  --token-color-decorative-first-intense-solid: var(--sbanken-purple-900);
  --token-color-decorative-second-muted: var(--sbanken-green-100);
  --token-color-decorative-second-muted-solid: var(--sbanken-green-100);
  --token-color-decorative-second-subtle: var(--sbanken-green-300);
  --token-color-decorative-second-subtle-solid: var(--sbanken-green-300);
  --token-color-decorative-second-base: var(--sbanken-green-500);
  --token-color-decorative-second-base-solid: var(--sbanken-green-500);
  --token-color-decorative-second-bold: var(--sbanken-green-700);
  --token-color-decorative-second-bold-solid: var(--sbanken-green-700);
  --token-color-decorative-second-intense: var(--sbanken-green-900);
  --token-color-decorative-second-intense-solid: var(--sbanken-green-900);
  --token-color-decorative-third-muted: var(--sbanken-purple-50);
  --token-color-decorative-third-muted-solid: var(--sbanken-purple-50);
  --token-color-decorative-third-subtle: var(--sbanken-purple-300);
  --token-color-decorative-third-subtle-solid: var(--sbanken-purple-300);
  --token-color-decorative-third-base: var(--sbanken-purple-500);
  --token-color-decorative-third-base-solid: var(--sbanken-purple-500);
  --token-color-decorative-third-bold: var(--sbanken-purple-700);
  --token-color-decorative-third-bold-solid: var(--sbanken-purple-700);
  --token-color-decorative-third-intense: var(--sbanken-purple-900);
  --token-color-decorative-third-intense-solid: var(--sbanken-purple-900);
  --token-color-component-button-background-action: var(
    --sbanken-purple-900
  );
  --token-color-component-button-background-action-hover: var(
    --sbanken-purple-900
  );
  --token-color-component-button-background-action-destructive: var(
    --sbanken-orange-700
  );
  --token-color-component-button-background-action-destructive-hover: var(
    --sbanken-orange-700
  );
  --token-color-component-button-background-action-destructive-hover-subtle: var(
    --sbanken-red-100
  );
  --token-color-component-button-background-action-destructive-pressed: var(
    --sbanken-orange-800
  );
  --token-color-component-button-background-action-destructive-pressed-subtle: var(
    --sbanken-red-200
  );
  --token-color-component-button-text-neutral: var(--sbanken-grey-0);
  --token-color-component-button-text-neutral-inverse: var(
    --sbanken-purple-1000
  );
  --token-color-component-button-text-neutral-ondark: var(
    --sbanken-purple-1000
  );
  --token-color-component-button-text-action: var(--sbanken-purple-900);
  --token-color-component-button-text-action-hover: var(
    --sbanken-purple-900
  );
  --token-color-component-button-text-action-inverse: var(
    --sbanken-green-300
  );
  --token-color-component-button-text-action-hover-inverse: var(
    --sbanken-green-300
  );
  --token-color-component-button-text-action-ondark: var(
    --sbanken-green-300
  );
  --token-color-component-button-text-action-hover-ondark: var(
    --sbanken-green-300
  );
  --token-color-component-button-text-action-disabled: var(
    --sbanken-grey-0
  );
  --token-color-component-button-text-neutral-destructive: var(
    --sbanken-grey-0
  );
  --token-color-component-button-text-action-destructive: var(
    --sbanken-orange-700
  );
  --token-color-component-button-text-action-destructive-hover: var(
    --sbanken-orange-700
  );
  --token-color-component-button-text-action-destructive-pressed: var(
    --sbanken-orange-500
  );
  --token-color-component-button-icon-neutral: var(--sbanken-grey-0);
  --token-color-component-button-icon-neutral-ondark: var(
    --sbanken-purple-1000
  );
  --token-color-component-button-icon-action: var(--sbanken-purple-900);
  --token-color-component-button-icon-action-hover: var(
    --sbanken-purple-900
  );
  --token-color-component-button-icon-action-disabled: var(
    --sbanken-grey-0
  );
  --token-color-component-button-icon-neutral-destructive: var(
    --sbanken-grey-0
  );
  --token-color-component-button-icon-action-destructive: var(
    --sbanken-orange-700
  );
  --token-color-component-button-icon-action-destructive-hover: var(
    --sbanken-orange-700
  );
  --token-color-component-button-icon-action-destructive-pressed: var(
    --sbanken-orange-500
  );
  --token-color-component-button-stroke-action: var(--sbanken-purple-900);
  --token-color-component-button-stroke-action-hover: var(
    --sbanken-purple-900
  );
  --token-color-component-button-stroke-action-destructive: var(
    --sbanken-orange-700
  );
  --token-color-component-button-stroke-action-destructive-hover: var(
    --sbanken-orange-700
  );
  --token-color-component-button-stroke-action-destructive-pressed: var(
    --sbanken-orange-500
  );
  --token-color-component-button-stroke-selected-wip: var(
    --sbanken-purple-700-40
  );
  --token-color-component-tooltip-background-neutral: var(
    --sbanken-grey-800
  );
  --token-color-component-table-background-neutral-alternative: var(
    --sbanken-grey-25
  );
  --token-color-component-dimmer-background: var(--sbanken-grey-1000-30);
  --token-color-component-switch-action-disabled-ondark: var(
    --sbanken-purple-1000
  );
  --token-color-component-progressbar-neutral-onsubtle: var(
    --sbanken-grey-300
  );
}
"
`;

exports[`makePropertiesFile Tokens snapshots for ui 1`] = `
"/* This file is auto generated by makePropertiesFile.ts */

:root {
  --token-color-background-page-background: var(--dnb-greyscale-0);
  --token-color-background-action: var(--dnb-coldgreen-600);
  --token-color-background-action-hover: var(--dnb-coldgreen-600);
  --token-color-background-action-hover-subtle: var(--dnb-coldgreen-100);
  --token-color-background-action-pressed: var(--dnb-coldgreen-700);
  --token-color-background-action-pressed-subtle: var(--dnb-coldgreen-200);
  --token-color-background-action-focus: var(--dnb-blue-600);
  --token-color-background-action-focus-subtle: var(--dnb-blue-100);
  --token-color-background-action-disabled: var(--dnb-greyscale-200);
  --token-color-background-action-inverse: var(--dnb-coldgreen-300);
  --token-color-background-action-hover-inverse: var(--dnb-coldgreen-300);
  --token-color-background-action-hover-subtle-inverse: var(
    --dnb-coldgreen-900
  );
  --token-color-background-action-pressed-subtle-inverse: var(
    --dnb-coldgreen-700
  );
  --token-color-background-action-ondark: var(--dnb-coldgreen-300);
  --token-color-background-action-hover-ondark: var(--dnb-coldgreen-300);
  --token-color-background-action-hover-subtle-ondark: var(
    --dnb-coldgreen-800
  );
  --token-color-background-action-pressed-ondark: var(--dnb-coldgreen-400);
  --token-color-background-action-pressed-subtle-ondark: var(
    --dnb-coldgreen-700
  );
  --token-color-background-action-disabled-ondark: var(
    --dnb-greyscale-700
  );
  --token-color-background-action-alternative: var(--dnb-greyscale-400);
  --token-color-background-action-alternative-hover-subtle: var(
    --dnb-greyscale-100
  );
  --token-color-background-selected: var(--dnb-coldgreen-800);
  --token-color-background-selected-subtle: var(--dnb-warmgreen-100);
  --token-color-background-selected-ondark: var(--dnb-coldgreen-100);
  --token-color-background-selected-subtle-ondark: var(--dnb-green-900);
  --token-color-background-neutral: var(--dnb-greyscale-0);
  --token-color-background-neutral-solid: var(--dnb-greyscale-0);
  --token-color-background-neutral-subtle: var(--dnb-greyscale-50);
  --token-color-background-neutral-base: var(--dnb-greyscale-100);
  --token-color-background-neutral-bold: var(--dnb-greyscale-200);
  --token-color-background-neutral-alternative: var(--dnb-blue-50);
  --token-color-background-info: var(--dnb-coldgreen-600);
  --token-color-background-info-subtle: var(--dnb-warmgreen-50);
  --token-color-background-positive: var(--dnb-green-700);
  --token-color-background-positive-subtle: var(--dnb-green-50);
  --token-color-background-warning: var(--dnb-yellow-500);
  --token-color-background-warning-subtle: var(--dnb-yellow-50);
  --token-color-background-error: var(--dnb-red-600);
  --token-color-background-error-subtle: var(--dnb-red-50);
  --token-color-background-marketing: var(--dnb-greyscale-800);
  --token-color-background-marketing-subtle: var(--dnb-blue-50);
  --token-color-text-action: var(--dnb-coldgreen-600);
  --token-color-text-action-hover: var(--dnb-coldgreen-600);
  --token-color-text-action-pressed: var(--dnb-coldgreen-700);
  --token-color-text-action-focus: var(--dnb-blue-600);
  --token-color-text-action-disabled: var(--dnb-greyscale-200);
  --token-color-text-action-inverse: var(--dnb-coldgreen-300);
  --token-color-text-action-hover-inverse: var(--dnb-coldgreen-300);
  --token-color-text-action-pressed-inverse: var(--dnb-coldgreen-400);
  --token-color-text-selected: var(--dnb-coldgreen-800);
  --token-color-text-action-ondark: var(--dnb-coldgreen-300);
  --token-color-text-action-hover-ondark: var(--dnb-coldgreen-300);
  --token-color-text-action-pressed-ondark: var(--dnb-coldgreen-400);
  --token-color-text-action-disabled-ondark: var(--dnb-greyscale-400);
  --token-color-text-action-alternative-ondark: var(--dnb-greyscale-0);
  --token-color-text-neutral: var(--dnb-greyscale-800);
  --token-color-text-neutral-solid: var(--dnb-greyscale-800);
  --token-color-text-neutral-alternative: var(--dnb-greyscale-500);
  --token-color-text-neutral-inverse: var(--dnb-greyscale-0);
  --token-color-text-neutral-ondark: var(--dnb-greyscale-0);
  --token-color-text-neutral-subtle: var(--dnb-greyscale-200);
  --token-color-text-neutral-subtle-solid: var(--dnb-greyscale-200);
  --token-color-text-destructive: var(--dnb-red-600);
  --token-color-text-destructive-inverse: var(--dnb-orange-600);
  --token-color-text-warning-bold: var(--dnb-yellow-800);
  --token-color-text-warning-bold-inverse: var(--dnb-yellow-500);
  --token-color-text-positive: var(--dnb-green-700);
  --token-color-text-positive-inverse: var(--dnb-green-600);
  --token-color-icon-action: var(--dnb-coldgreen-600);
  --token-color-icon-action-hover: var(--dnb-coldgreen-600);
  --token-color-icon-action-pressed: var(--dnb-coldgreen-700);
  --token-color-icon-action-focused: var(--dnb-blue-600);
  --token-color-icon-action-disabled: var(--dnb-greyscale-200);
  --token-color-icon-action-inverse: var(--dnb-coldgreen-300);
  --token-color-icon-action-hover-inverse: var(--dnb-coldgreen-300);
  --token-color-icon-action-pressed-inverse: var(--dnb-coldgreen-400);
  --token-color-icon-selected: var(--dnb-coldgreen-800);
  --token-color-icon-selected-ondark: var(--dnb-coldgreen-100);
  --token-color-icon-action-ondark: var(--dnb-coldgreen-300);
  --token-color-icon-action-alternative-ondark: var(--dnb-greyscale-0);
  --token-color-icon-action-hover-ondark: var(--dnb-coldgreen-300);
  --token-color-icon-action-pressed-ondark: var(--dnb-coldgreen-400);
  --token-color-icon-action-disabled-ondark: var(--dnb-greyscale-400);
  --token-color-icon-neutral: var(--dnb-greyscale-800);
  --token-color-icon-neutral-inverse: var(--dnb-greyscale-0);
  --token-color-icon-neutral-ondark: var(--dnb-greyscale-0);
  --token-color-icon-neutral-solid: var(--dnb-greyscale-800);
  --token-color-icon-neutral-alternative: var(--dnb-greyscale-500);
  --token-color-icon-destructive: var(--dnb-red-600);
  --token-color-icon-marketing: var(--dnb-greyscale-800);
  --token-color-stroke-action: var(--dnb-coldgreen-600);
  --token-color-stroke-action-alternative: var(--dnb-greyscale-400);
  --token-color-stroke-action-hover: var(--dnb-coldgreen-600);
  --token-color-stroke-action-pressed: var(--dnb-coldgreen-700);
  --token-color-stroke-action-inverse: var(--dnb-coldgreen-300);
  --token-color-stroke-action-hover-inverse: var(--dnb-coldgreen-300);
  --token-color-stroke-action-pressed-inverse: var(--dnb-coldgreen-400);
  --token-color-stroke-action-focus: var(--dnb-blue-600);
  --token-color-stroke-action-focus-subtle: var(--dnb-blue-100);
  --token-color-stroke-action-disabled: var(--dnb-greyscale-200);
  --token-color-stroke-selected: var(--dnb-coldgreen-800);
  --token-color-stroke-selected-ondark: var(--dnb-coldgreen-100);
  --token-color-stroke-action-ondark: var(--dnb-coldgreen-300);
  --token-color-stroke-action-alternative-ondark: var(--dnb-greyscale-200);
  --token-color-stroke-action-hover-ondark: var(--dnb-coldgreen-300);
  --token-color-stroke-action-pressed-ondark: var(--dnb-coldgreen-400);
  --token-color-stroke-action-disabled-ondark: var(--dnb-greyscale-600);
  --token-color-stroke-neutral: var(--dnb-greyscale-800);
  --token-color-stroke-neutral-ondark: var(--dnb-greyscale-0);
  --token-color-stroke-neutral-subtle: var(--dnb-greyscale-100);
  --token-color-stroke-neutral-bold: var(--dnb-greyscale-200);
  --token-color-stroke-neutral-alternative: var(--dnb-blue-50);
  --token-color-stroke-info: var(--dnb-coldgreen-600);
  --token-color-stroke-positive: var(--dnb-green-700);
  --token-color-stroke-warning: var(--dnb-yellow-500);
  --token-color-stroke-error: var(--dnb-red-600);
  --token-color-stroke-marketing: var(--dnb-greyscale-800);
  --token-color-decorative-first-muted: var(--dnb-coldgreen-100);
  --token-color-decorative-first-muted-solid: var(--dnb-coldgreen-100);
  --token-color-decorative-first-subtle: var(--dnb-coldgreen-300);
  --token-color-decorative-first-subtle-solid: var(--dnb-coldgreen-300);
  --token-color-decorative-first-base: var(--dnb-coldgreen-500);
  --token-color-decorative-first-base-solid: var(--dnb-coldgreen-500);
  --token-color-decorative-first-bold: var(--dnb-coldgreen-700);
  --token-color-decorative-first-bold-solid: var(--dnb-coldgreen-700);
  --token-color-decorative-first-intense: var(--dnb-coldgreen-950);
  --token-color-decorative-first-intense-solid: var(--dnb-coldgreen-950);
  --token-color-decorative-second-muted: var(--dnb-green-100);
  --token-color-decorative-second-muted-solid: var(--dnb-green-100);
  --token-color-decorative-second-subtle: var(--dnb-green-300);
  --token-color-decorative-second-subtle-solid: var(--dnb-green-300);
  --token-color-decorative-second-base: var(--dnb-green-500);
  --token-color-decorative-second-base-solid: var(--dnb-green-500);
  --token-color-decorative-second-bold: var(--dnb-green-700);
  --token-color-decorative-second-bold-solid: var(--dnb-green-700);
  --token-color-decorative-second-intense: var(--dnb-green-900);
  --token-color-decorative-second-intense-solid: var(--dnb-green-900);
  --token-color-decorative-third-muted: var(--dnb-warmgreen-50);
  --token-color-decorative-third-muted-solid: var(--dnb-warmgreen-50);
  --token-color-decorative-third-subtle: var(--dnb-warmgreen-300);
  --token-color-decorative-third-subtle-solid: var(--dnb-warmgreen-300);
  --token-color-decorative-third-base: var(--dnb-warmgreen-500);
  --token-color-decorative-third-base-solid: var(--dnb-warmgreen-500);
  --token-color-decorative-third-bold: var(--dnb-warmgreen-700);
  --token-color-decorative-third-bold-solid: var(--dnb-warmgreen-700);
  --token-color-decorative-third-intense: var(--dnb-warmgreen-900);
  --token-color-decorative-third-intense-solid: var(--dnb-warmgreen-900);
  --token-color-component-button-background-action: var(
    --dnb-coldgreen-600
  );
  --token-color-component-button-background-action-hover: var(
    --dnb-coldgreen-600
  );
  --token-color-component-button-background-action-destructive: var(
    --dnb-red-600
  );
  --token-color-component-button-background-action-destructive-hover: var(
    --dnb-red-600
  );
  --token-color-component-button-background-action-destructive-hover-subtle: var(
    --dnb-red-50
  );
  --token-color-component-button-background-action-destructive-pressed: var(
    --dnb-red-700
  );
  --token-color-component-button-background-action-destructive-pressed-subtle: var(
    --dnb-red-100
  );
  --token-color-component-button-text-neutral: var(--dnb-greyscale-0);
  --token-color-component-button-text-neutral-inverse: var(
    --dnb-coldgreen-900
  );
  --token-color-component-button-text-neutral-ondark: var(
    --dnb-coldgreen-900
  );
  --token-color-component-button-text-action: var(--dnb-coldgreen-600);
  --token-color-component-button-text-action-hover: var(
    --dnb-coldgreen-600
  );
  --token-color-component-button-text-action-inverse: var(
    --dnb-coldgreen-300
  );
  --token-color-component-button-text-action-hover-inverse: var(
    --dnb-coldgreen-300
  );
  --token-color-component-button-text-action-ondark: var(
    --dnb-coldgreen-300
  );
  --token-color-component-button-text-action-hover-ondark: var(
    --dnb-coldgreen-300
  );
  --token-color-component-button-text-action-disabled: var(
    --dnb-greyscale-0
  );
  --token-color-component-button-text-neutral-destructive: var(
    --dnb-greyscale-0
  );
  --token-color-component-button-text-action-destructive: var(
    --dnb-red-600
  );
  --token-color-component-button-text-action-destructive-hover: var(
    --dnb-red-600
  );
  --token-color-component-button-text-action-destructive-pressed: var(
    --dnb-red-700
  );
  --token-color-component-button-icon-neutral: var(--dnb-greyscale-0);
  --token-color-component-button-icon-neutral-ondark: var(
    --dnb-coldgreen-900
  );
  --token-color-component-button-icon-action: var(--dnb-coldgreen-600);
  --token-color-component-button-icon-action-hover: var(
    --dnb-coldgreen-600
  );
  --token-color-component-button-icon-action-disabled: var(
    --dnb-greyscale-0
  );
  --token-color-component-button-icon-neutral-destructive: var(
    --dnb-greyscale-0
  );
  --token-color-component-button-icon-action-destructive: var(
    --dnb-red-600
  );
  --token-color-component-button-icon-action-destructive-hover: var(
    --dnb-red-600
  );
  --token-color-component-button-icon-action-destructive-pressed: var(
    --dnb-red-700
  );
  --token-color-component-button-stroke-action: var(--dnb-coldgreen-600);
  --token-color-component-button-stroke-action-hover: var(
    --dnb-coldgreen-600
  );
  --token-color-component-button-stroke-action-destructive: var(
    --dnb-red-600
  );
  --token-color-component-button-stroke-action-destructive-hover: var(
    --dnb-red-600
  );
  --token-color-component-button-stroke-action-destructive-pressed: var(
    --dnb-red-700
  );
  --token-color-component-button-stroke-selected-wip: var(
    --dnb-coldgreen-700-40
  );
  --token-color-component-tooltip-background-neutral: var(
    --dnb-greyscale-800
  );
  --token-color-component-table-background-neutral-alternative: var(
    --dnb-greyscale-25
  );
  --token-color-component-dimmer-background: var(--dnb-greyscale-1000-30);
  --token-color-component-switch-action-disabled-ondark: var(
    --dnb-greyscale-800
  );
  --token-color-component-progressbar-neutral-onsubtle: var(
    --dnb-greyscale-200
  );
}
"
`;
